tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_number.fg
/; EXPECT_ERROR: AssignmentToNonLValue
var x:int = 10
42 = x

